# ChangeLog for net-analyzer/nagios-plugins-extra
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Mar 2011; Justin Lecher <jlec@gentoo.org> nagios-plugins-extra-0.4.ebuild,
  nagios-plugins-extra-0.5.ebuild, nagios-plugins-extra-0.6.ebuild,
  metadata.xml:
  Fixed license

  10 Feb 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Metadata.xml fixed
