@@ -1,14 +1,17 @@
-DIST nagios-plugins-extra-0.4.tar.bz2 14255 RMD160 d66971cbe43f6f056d1c989b9491a36c9879c4fa SHA1 0ecb01ba5458656bd67a02dac8a0a03437c65a02 SHA256 67de3d48f6cad9a37f3e205bd6f4fc2f8c625ae3dbc02d9d998f3d44973750d1
-DIST nagios-plugins-extra-0.5.tar.bz2 20049 RMD160 7c7e544cf80e32bee1e05cf5afa719c31a32189e SHA1 0e3e960abbe27bcb9ad848b3162c4db534f3dd5c SHA256 2dc194694edac3d0503291b3a48ebcd3ca358212d291eadce663fae17f1cc602
-DIST nagios-plugins-extra-0.6.tar.bz2 16978 RMD160 ae7ecf5e85749e221d8703ae94e08b912c2b1d85 SHA1 47014202c13004118a26345478086212db012a21 SHA256 9c7a048a88652c6599c0930b919b035013b723792dc513c85d462bae55f06347
-DIST nagios-plugins-extra-0.7.tar.bz2 20212 RMD160 3e7b87d971d96b332fc86b78307a209d5306bc99 SHA1 49232ca0621dbb33481c4373fdf105643249d8c5 SHA256 13b530e8bd1eb024b774fc595a9c744eee3540f72bcde59d25db098b56124fe9
-DIST nagios-plugins-extra-0.8.tar.bz2 21259 RMD160 de2c1de600f3d5fd665d72ec589b0b9faa51bf61 SHA1 f1d494653239cefd89131f2f9c990f8dad36b37d SHA256 89a61f7366023a6dfdc7648d6196a675cbb2de1b724c570cb8d22ffa323ea16f
-DIST nagios-plugins-extra-0.9.tar.bz2 23117 RMD160 316e9fce17c33e939583dc719a2c246cc4918701 SHA1 14753291489900e2ec3882a8c656428e5401e5df SHA256 20d118e01155e3b153d11207d1000d246ed4a4659ed8dc2e00990613bafafb65
-EBUILD nagios-plugins-extra-0.4.ebuild 1529 RMD160 98c33af2780a08cdf238e77d0603d969b49248ef SHA1 44810fa7fa5086b266cbf92f1adb88ca0fa2134f SHA256 6796b212a6b11ca00ea13a0abc1bc079b2ed36eb24a7976302219b77b00c5811
-EBUILD nagios-plugins-extra-0.5.ebuild 2005 RMD160 cc4b8be854abc603308863ddd5f6fa15703115a1 SHA1 6251101075bbb0922ce30027773a18bcd09e3f13 SHA256 c4890f4503ef29d51cde1812db0e1a085be8631f5313b082537721a862aa4028
-EBUILD nagios-plugins-extra-0.6.ebuild 2027 RMD160 a28159801f09220bb90a5e8cb0c59635b12435f5 SHA1 bf1b1175e78b40f42336c084101cf094903079e4 SHA256 995f68c76027661adf0767103e27506b53653feaf7bb21a88e576dd252f2bd5c
-EBUILD nagios-plugins-extra-0.7.ebuild 2229 RMD160 0df8874a1e3cc2a226e30427774ab0314685dbe3 SHA1 4c8c12c31e560580101065b75d3701735d222ece SHA256 113f474f509e27c757ea788e42d8b249766d3bca622d14c85004966bd3b50b49
-EBUILD nagios-plugins-extra-0.8.ebuild 2272 RMD160 42881cb989c06a42761ea041054ffc33a836939d SHA1 8f7266c3ef130937423ddc53ed3e6ed082ed31d8 SHA256 550b371f86dc1bf94f6a5b2af05354a469ad798b8f811d345387eee6bbd857ef
-EBUILD nagios-plugins-extra-0.9.ebuild 2411 RMD160 7e09a5726e4f64a362877eae7198412f9aa1d4f4 SHA1 fa41491b0ec0c56ee2eb52391a7c296de3bd55a1 SHA256 411647215486e420882198f7819d0794e310706fe8eecf27967532f047e71035
-MISC ChangeLog 398 RMD160 ad67baced0e244cddabc6f7810bc345367410296 SHA1 c316279ea5fd1f94eb51b6a14e8ca57a6269cd94 SHA256 93635d92cf6d7b09d660ac56ae60aee0b0c4f446e6ad9ffd44ed04b35afe917c
-MISC metadata.xml 512 RMD160 3a23341e1c12308109fe51a1944a9fc7aa2eb6b5 SHA1 fdd880ad754360252917791a533ac869d062807d SHA256 c901cc34caf7844332bbc3138d740ad6ac658391b47137616f431e605f07a9bb
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST nagios-plugins-extra-0.8.tar.bz2 21259 SHA256 89a61f7366023a6dfdc7648d6196a675cbb2de1b724c570cb8d22ffa323ea16f
+DIST nagios-plugins-extra-0.9.tar.bz2 23117 SHA256 20d118e01155e3b153d11207d1000d246ed4a4659ed8dc2e00990613bafafb65
+EBUILD nagios-plugins-extra-0.8.ebuild 2294 SHA256 3a12faf9ac24979a011310c4b9ad45909a7faf1f6cc89098cb56715e12e546fb SHA512 e1e29de84e96ee5c851498a23a7c6e31826c7253ba86d91d4aea12245f2961d7ae06d55d32acbb9e1e257e6b8a349be0ae8748858fe8e262f0096ea0b590982d WHIRLPOOL e800c901e336802536bbfc8986ec4cfd1e7a1eefd49870061f45ad4c6b63eef2f57899c7322648ac8d019ee5f496376f42ea4ac83fb39d7fe2f533029aaf7553
+EBUILD nagios-plugins-extra-0.9.ebuild 2432 SHA256 9d0831daff6aec56c82f99973da35875a05143235be0ec12dc8d0e0c7437b043 SHA512 9c6e60ca59db5806c3885fbe53eb2175044323c8cf86db9b7619a740aba0600ff3e55dca260a9456ac0bd0b6fca8e3664646bca66d7d865ee9586a9449bb16d4 WHIRLPOOL a4c84eb49f6ae781dd3473e249af48866f36fa47819b4c0b0f0ad4dc774b0568066344c68fe462e9d75c743161646a7f00b2b2bcf44b8b7058a04b7f9764a304
+MISC ChangeLog 739 SHA256 3068ce25d021ac51f21f021021489416dc7e07d23a58d764245e183f9ba47516 SHA512 79059152d641b3acf4ed4af22f19110e69c89a7ab411d9040d30a4dbfb23f96a156a1362905c90f6423821c83654f9cd05af34ff9bd023a1f146f06500401e83 WHIRLPOOL ee68ce692b6379e600327d686a80d2ec73c37c990a39eda8d3acf950cddc4076a4efb685ecc7f7709ef8fab3e7e53f99efb891eb811cf3d9d5717243c660ef7b
+MISC metadata.xml 534 SHA256 87d876067dd6f6ab62031bd44e2e07e14a870169d1a01e8c7a7da71e4c59f67d SHA512 18a65ac3623e6d716cbd5ee8d99c02887bcace45b300eac53c12256c6342eaf6eebe1749c139c0dc2e587aa1e1af771462d8b682ec1456499535869b108e5f98 WHIRLPOOL 522e95bd4a7deb39ffcb0b80bc2332a234eb2ba752ae2c87c4a872cccee160ae95c1403dc645969c3ed8dbce042d480c6b25913995d337643fd6d4301ccdd900
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+Comment: GPGTools - http://gpgtools.org
+
+iEYEAREIAAYFAlAnfVYACgkQgAnW8HDreRaWowCfZyB1YNPHuQJB6Hc/sLPkIWf2
+UckAoI3vCnoRRDwIj+HSCUltEdnwFmTW
+=JsnO
+-----END PGP SIGNATURE-----
